themes/chyrp/stylesheets/screen.css
/* ... */
    #extend .notes li .user .right a {
        margin-left: 1em;
        font-size: .9em;
}

/* Blog area */
#blog {
    }
    #blog .info {
        float: left;
        width: 20em;
        text-align: right;
        margin-left: -21em;
        }
        #blog .info li {
            list-style: none;
            }
            #blog .info li h2 {
                font-size: 3em;
                line-height: 1.1em;
                margin: 0;
                font-weight: bold;
            }
            #blog .info li .sub {
                padding: .5em;
                background: #0a0a0a;
            }
            #blog .info li .controls {
                font-size: .9em;
                color: #333;
    }
    #blog .post {
        margin-bottom: 2em;
        }
        #blog .post .block {
            float: left;
            background: #0a0a0a;
            padding: 1em 1em 0;
    }
    #blog .post.chat {
        }
        #blog .post.chat .dialogue {
            background: #0a0a0a;
            margin: 0;
            }
            #blog .post.chat .dialogue li {
                list-style: none;
                padding: .125em .5em;
                }
                #blog .post.chat .dialogue li .label {
                    color: #999;
            }
            #blog .post.chat .dialogue li.even {
                background: #0d0d0d;
            }
            #blog .post.chat .dialogue li.me .label {
                color: #FF8A2D;
    }
    #blog .post.quote {
        }
        #blog .post.quote .info {
            margin-top: 1.75em;
        }
        #blog .post.quote blockquote {
            font-size: 2em;
            padding: 1em 1em 0;
        }
        #blog .post.quote .source {
            color: #555;
    }
    #blog .post.link {
        }
        #blog .post.link .info {
            margin-top: 1em;
        }
        #blog .post.link h2 {
            padding: .5em;
            border-bottom: .05em solid #222;
        }
        #blog .post.link h2 a {
            color: #FFE12A;
    }
    #blog .post.text {
        }
        #blog .post.text .info {
            margin-top: 1em;
        }
        #blog .post.text h3 {
            padding: .5em;
            border-bottom: .05em solid #222;
            margin: 0;
            font-size: 2em;
        }
        #blog .post.text .content {
            padding: 1em 1em 0;
            background: #0a0a0a;
            }
            #blog .post.text .content p {
                margin: 0;
                padding-bottom: 1em;
}

/* Notification Messages */
.flash {
    margin-bottom: 1em;
    padding: .5em .75em;
    background: #0c0c0c;
    }
    .flash .sub {
        margin-left: .5em;
        opacity: .5;
        font-size: .9em;
    }
    .flash.notice {
        color: #CAFF2A;
    }
    .flash.warning {
        color: #FF2E99;
    }
    .flash.message {
        color: #1FB5FF;
}

/* Attachments List */
.attachments {
    }
    .attachments h5 {
        background: #0c0c0c;
        display: block;
        margin: 0;
        padding: .125em .5em;
        font-weight: normal;
    }
    .attachments ul {
        margin: .5em 0 1em 1em;
        }
        .attachments ul li {
            list-style: none;
            line-height: 2em;
            border-bottom: .1em solid #161616;
            }
            .attachments ul li a:hover {
                text-decoration: underline;
            }
            .attachments ul li .thumbnail {
                vertical-align: middle;
                border: .1em solid #000;
                margin: -.25em .25em 0 0;
}
form #attachments {
    min-height: 2.15em;
    margin: 0 0 1em;
}

/* Controls Bar */
div#controls {
    background-color: #131313;
    border-top: .1em solid #0f0f0f;
    width: 100%;
    position: fixed;
    bottom: 1.9em;
    left: 0;
    right: 0;
}
div#controls ul {
    margin: 0 auto;
    padding: .2em;
    width: 600px;
    text-align: center;
}
div#controls ul li {
    background: none;
    display: inline;
    font-weight: bold;
    margin: 0;
    padding: 0;
}
div#controls ul li a:link,
div#controls ul li a:visited {
    color: #bbb;
    border: none;
    padding: .1em .6em;
}
div#controls ul li a:hover {
    color: #fff;
}
div#controls ul li.close a:link,
div#controls ul li.close a:visited {
    color: #e35533;
}
div#controls ul li.close a:hover {
    color: #ff6039;
}

/* Debugger */
#debug {
    background: #0c0c0c;
    color: #555;
    padding: 0 .75em .5em .75em;
    border-top: .1em solid #000;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    max-height: 33%;
    overflow-y: scroll;
    overflow-x: hidden;
    font-size: .9em;
}
#debug h5 {
    margin: 0;
    color: #555;
}
#debug h5 .sub {
    color: #333;
}
#debug ol.queries li {
    margin: 0 0 1em;
}
#debug pre {
    background: #fff;
    border: 1px solid #ddd;
    padding: 0 .5em;
    word-wrap: break-word;
}
#debug .toggle {
    font-weight: bold;
    color: #666;
    float: right;
}

/* Miscellaneous */
.sub {
    font-size: 11px;
    line-height: 11px;
    color: #777;
    font-weight: normal;
    }
    .sub strong {
        color: #fff;
        font-weight: normal;
}
.add-attachment {
    font-size: 1.5em;
    line-height: .666em;
    padding: .3em .3125em;
    background: #1d1d1d;
    margin-left: .5em;
    margin-top: .1em;
    display: inline-block;
}
.add-attachment:hover {
    background-color: #222;
}
.add-attachment:active {
    background: #0a0a0a;
}
.pagination {
    margin-bottom: 3em;
    }
    .pagination a {
        padding: .5em;
        background: #0f0f0f;
    }
    .pagination a.prev_link {
        float: left;
    }
    .pagination a.next_link {
        float: right;
    }
    .pagination .nums {
        margin-left: .75em;
        font-size: 1em;
}
.blurb {
    font-size: 1.5em;
    line-height: 1.5em;
}
.big {
    font-size: 1.5em;
    font-weight: bold;
    margin-bottom: 1em;
    }
/* ... */

